# StikPair

./: .gitignore  LICENSE  README.md  build-rust.sh  project.yml
.github/workflows/: build.yml
App/: ContentView.swift  Info.plist  KeepAlive.swift  LocalNetworkAuthorization.swift  PairingController.swift  StikPairApp.swift
App/Assets.xcassets/AppLogo.imageset/: Contents.json
App/StikPair.icon/: icon.json
rust/: Cargo.toml
rust/include/: module.modulemap  stikpair.h
rust/src/: lib.rs
